# plivo_pipecat_localllm

./: .gitignore  architecture.docx  architecture.md
backend/: pyproject.toml  requirements.txt  start_vllm.sh  start_vllm_sharath.sh
backend/heplers/: bot.py  db.py  rag.py
backend/routers/: auth.py  server.py  upload.py
frontend/: index.html
