[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.133.1",
    "loguru>=0.7.0",
    "pipecat-ai[cartesia,elevenlabs,google,openai,sarvam,silero]>=1.0.0",
    "pipecat-vobiz>=0.0.2",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.13.0",
    "uvicorn[standard]>=0.41.0",
    "sentence-transformers>=5.2.3",
    "num2words>=0.5.13",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[tool.uv]
prerelease = "allow"
